<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_editar_FS"
        android:title="@string/menuEditar" />

    <item
        android:id="@+id/action_apagar_FS"
        android:title="@string/menuApagar" />

    <item
        android:id="@+id/action_Adicionar_P_FS"
        android:title="@string/menuAdicionarPFS"
        android:visible="false"/>

    <item
        android:id="@+id/action_eleminar_P_FS"
        android:title="@string/menuEleminarPFS"
        android:visible="false"/>

    <item
        android:id="@+id/action_Adicionar_G_FS"
        android:title="@string/menuAdicionarGFS"
        android:visible="false"/>

    <item
        android:id="@+id/action_eliminar_G_FS"
        android:title="@string/menuRemoverGFS"
        android:visible="false" />

</menu>