<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FSDetalhesActivity"
    tools:showIn="@layout/activity_editar_fs">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarNomeFS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditarNomeFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintNome"
            android:inputType="textShortMessage|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerEditarEstadoFS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/SpinnerEstados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarNomeFS" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HintGeneros"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerEditarEstadoFS" />

    <TextView
        android:id="@+id/textViewDetalhesGeneros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem_padrao"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditarEstadoFS" />

    <ImageView
        android:id="@+id/imageViewDetalhesPoster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_margin="@dimen/margem_padrao"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="128dp"
        android:background="#416B6B6B"
        android:onClick="getImage"
        android:src="@mipmap/no_image_fs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetalhesGeneros" />

    <RadioGroup
        android:id="@+id/radioGroupEditarFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetalhesPoster"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetalhesGeneros">

        <RadioButton
            android:id="@+id/radioButtonEditarFSFilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Filme" />

        <RadioButton
            android:id="@+id/radioButtonEditarFSSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Serie" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarNumFS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetalhesPoster"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEditarFS">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditarNumFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintNum"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarEpiVistosFS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetalhesPoster"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarNumFS">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditarEpiVistosFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintEpiVistos"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarDataFS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetalhesPoster"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarEpiVistosFS">

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/editTextEditarDataFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintData"
            android:inputType="date"
            app:met_mask="##/##/####" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFS_P"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetalhesPoster">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFS_P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem_padrao"
            android:orientation="horizontal"
            android:padding="3dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/butãoEditarSaveFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Save"
        android:text="@string/butãoSave"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFS_P" />

    <Button
        android:id="@+id/butãoCancelFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        android:onClick="Cancel"
        android:text="@string/butãoVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFS_P" />

</androidx.constraintlayout.widget.ConstraintLayout>