<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddPeopleActivity"
    tools:showIn="@layout/activity_add_people">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAdicionarNomeP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAdicionarNomeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintNome"
            android:inputType="textShortMessage|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAdicionarFunçãoP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAdicionarNomeP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAdicionarFunçãoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintJob"
            android:inputType="textShortMessage|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAdicionarDataP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAdicionarFunçãoP">

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/editTextAdicionarDataP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintBirth"
            android:inputType="date"
            app:met_mask="##/##/####" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAdicionarDataP">

        <Button
            android:id="@+id/buttonSaveAddP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Save"
            android:text="@string/butãoSave" />

        <Button
            android:id="@+id/buttonCancelAddP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Cancel"
            android:text="@string/butãoCancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>