<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditPeopleActivity"
    tools:showIn="@layout/activity_edit_people">

    <ImageView
        android:id="@+id/imageViewP"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="getImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarNomeP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewP"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditarNomeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintNome"
            android:inputType="textShortMessage|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarFunçãoP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewP"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarNomeP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditarFunçãoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintJob"
            android:inputType="textShortMessage|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditarDataP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewP"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarFunçãoP">

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/editTextEditarDataP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintBirth"
            android:inputType="date"
            app:met_mask="##/##/####" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/butãoEditar_Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Save"
        android:text="@string/butãoSave"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarDataP" />

    <Button
        android:id="@+id/butãoCancelP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="Cancel"
        android:text="@string/butãoVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditarDataP" />

</androidx.constraintlayout.widget.ConstraintLayout>