<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GerirPActivity"
    tools:showIn="@layout/activity_gerir_p">

    <Button
        android:id="@+id/butãoAdicionarP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginTop="8dp"
        android:onClick="Add"
        android:text="@string/butãoAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGerirNomeP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_padrao"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_padrao"
        android:layout_marginEnd="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao"
        app:layout_constraintEnd_toStartOf="@+id/butãoProcurarP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butãoAdicionarP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextGerirNomeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintNome" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/butãoProcurarP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/butãoSearch"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayoutGerirNomeP"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGerirNomeP"
        android:layout_marginTop="@dimen/margem_padrao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>